# Daily-Tracker

./: .gitignore  CODE_REVIEW_FRONTEND.md  CODE_REVIEW_MASTER.md  CODE_REVIEW_SECURITY.md  PRODUCTIVOS_PROJECT_SPEC.md  PROJECT_STRUCTURE.txt  README.md  RLS_ENFORCEMENT.md
.cursor/rules/: backend.mdc  core.mdc  database.mdc  frontend-design.mdc  frontend.mdc
.kiro/steering/: product.md  structure.md  tech.md
backend/: GEMINI.md  create_tables.sql  pyproject.toml  rls_policies.sql  test_gemini.py
backend/app/: database.py  dependencies.py  main.py
backend/app/routers/: auth.py  jobs.py  logs.py  reference.py  study.py  tasks.py
backend/app/schemas/: job.py  log.py  reference.py  study.py  task.py
backend/app/services/: gemini_service.py  sm2_algorithm.py
docs/reviews/: CODE_REVIEW_BACKEND.md  CODE_REVIEW_FRONTEND.md  CODE_REVIEW_INTEGRATION.md  CODE_REVIEW_MASTER.md  CODE_REVIEW_SECURITY.md
frontend/: GEMINI.md  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AddJobModal.jsx  AddTaskModal.jsx  ComboboxCreatable.jsx  JobCard.jsx  KanbanColumn.jsx  LogEditor.jsx  LogJournal.jsx  Navbar.jsx  ProtectedRoute.jsx  Sidebar.jsx  TaskCard.jsx
frontend/src/components/study/: DueTodayPanel.jsx  (+3 more)
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: DailyLog.jsx  ForgotPassword.jsx  JobTracker.jsx  Login.jsx  ResetPassword.jsx  Signup.jsx  StudyQA.jsx  Tasks.jsx
frontend/src/services/: api.js  asyncUtils.js  requestDedup.js  supabaseClient.js  tokenCache.js
frontend/src/store/: useAppStore.js
