[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "google-genai>=2.3.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "supabase>=2.30.0",
    "uvicorn>=0.47.0",
]
